automatic project update for